[gd_scene load_steps=20 format=3 uid="uid://yquogj37313x"]

[ext_resource type="Script" path="res://scenes/gameobjects/ogre.gd" id="1_uflum"]
[ext_resource type="PackedScene" uid="uid://btt6snnj05le0" path="res://scenes/components/health_component.tscn" id="3_4tqvm"]
[ext_resource type="PackedScene" uid="uid://cqf3hon38ngj2" path="res://scenes/components/enemy_radar_component.tscn" id="3_s61v1"]
[ext_resource type="PackedScene" uid="uid://cxvof3ef3d7f" path="res://scenes/components/velocity_component.tscn" id="3_u5sm0"]
[ext_resource type="PackedScene" uid="uid://d4immjrrh5iwh" path="res://scenes/components/death_component.tscn" id="3_vu61g"]
[ext_resource type="PackedScene" uid="uid://c87172ansg6ek" path="res://scenes/components/hurt_component.tscn" id="5_kixyf"]
[ext_resource type="PackedScene" uid="uid://crujcbptu0hb8" path="res://scenes/components/hitbox_component.tscn" id="5_xftb4"]
[ext_resource type="Shader" path="res://resources/white.gdshader" id="7_2aewi"]
[ext_resource type="Texture2D" uid="uid://dqpc25w8aukmw" path="res://assets/Sprites/Ogre.png" id="9_1egpa"]
[ext_resource type="AudioStream" uid="uid://j2hhtbni14be" path="res://assets/Audio/footstep_carpet_000.ogg" id="10_gk8wn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2dttq"]
size = Vector2(25, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wlkcc"]
size = Vector2(25, 30)

[sub_resource type="CircleShape2D" id="CircleShape2D_t74jy"]
radius = 160.0

[sub_resource type="CircleShape2D" id="CircleShape2D_156eq"]

[sub_resource type="Animation" id="Animation_l62u2"]
resource_name = "Idle"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_2ht1y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="Animation" id="Animation_ib0mq"]
resource_name = "Run"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_euo2s"]
_data = {
"Idle": SubResource("Animation_l62u2"),
"RESET": SubResource("Animation_2ht1y"),
"Run": SubResource("Animation_ib0mq")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8c3tp"]
shader = ExtResource("7_2aewi")

[node name="Ogre" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_uflum")

[node name="VelocityComponent" parent="." instance=ExtResource("3_u5sm0")]
max_speed = 10
acceleration = 5.0

[node name="DeathComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("3_vu61g")]
health_component = NodePath("../HealthComponent")

[node name="HealthComponent" parent="." instance=ExtResource("3_4tqvm")]
max_health = 2.0

[node name="HurtComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("5_kixyf")]
health_component = NodePath("../HealthComponent")
character_type = Array[int]([2])
sprite = NodePath("../Sprite2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtComponent"]
position = Vector2(4.47035e-07, 2.5)
shape = SubResource("RectangleShape2D_2dttq")

[node name="Hitbox_component" parent="." instance=ExtResource("5_xftb4")]
damage = 2
character_type = Array[int]([3])

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox_component"]
position = Vector2(-4.47035e-07, 2.5)
shape = SubResource("RectangleShape2D_wlkcc")

[node name="EnemyRadarComponent" parent="." instance=ExtResource("3_s61v1")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyRadarComponent"]
shape = SubResource("CircleShape2D_t74jy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 7)
shape = SubResource("CircleShape2D_156eq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_euo2s")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_8c3tp")
use_parent_material = true
texture = ExtResource("9_1egpa")
hframes = 4
vframes = 3
frame = 5

[node name="HurtAudioStream" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_gk8wn")
